# brasilAPI-Cpp

./: .clang-format  .env  .gitignore  CMakeLists.txt  CMakeUserPresets.json  Makefile  README.md  cmake_install.cmake  conanfile.txt  config.json
scripts/: build.sh
src/: main.cc
src/Client/: BrasilAPIClient.cc  BrasilAPIClient.h
src/Controller/: BanksController.cc  BanksController.h
src/Examples/: mainExample.cc
src/Facade/: BanksFacade.cc  BanksFacade.h
src/Handlers/: BanksHandler.cc  BanksHandler.h  BrasilAPIHandlerBase.cc  BrasilAPIHandlerBase.h  CNPJHandler.cc  CNPJHandler.h  CepHandler.cc  CepHandler.h  CepHanlder.cc  CorretorasHandler.cc  CorretorasHandler.h  CptecHandler.cc  CptecHandler.h  DDDHandler.cc  DDDHandler.h  FeriadosHandler.cc  FeriadosHandler.h  FipeHandler.cc  FipeHandler.h  IBGEHandler.cc  IBGEHandler.h  ISBNHandler.cc  ISBNHandler.h  NCMHandler.cc  NCMHandler.h  NCMHandlers.h
src/Response/: Bank.cc  BankResponse.h  BanksResponse.cc  BaseResponse.h  CNPJResponse.h  CepResponse.cc  CepResponse.h  CidadePrevisaoMetereologica.h  CondicoesAeroporto.h  CorretorasResponse.h  CptecCapitaisResponse.h  CptecCidadesResponse.h  DDD.h  ErrorResponse.h  FeriadosResponse.h  FipeResponse.h  IBGEResponse.h  ISBNProviders.h  ISBNResponse.h  NCMResponse.h  PrevisaoOceanica.h
src/Services/: BanksFacade.cc  BanksFacade.h  BrasilAPIFacadeBase.cc  BrasilAPIFacadeBase.h
src/Tests/: TestController.cc  main-test.cc
src/Tests/Base/: Test-base.h
src/Tests/Services/: BanksTest.cc
src/Utils/: BrasilAPIException.h  JsonSerialize.h  ProviderToString.h  ValidateProviders.cc  ValidateProviders.h
